--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ quarkus.http.port=8080
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=postgres
 quarkus.datasource.password=postgres
-quarkus.datasource.jdbc.url=jdbc:postgresql://postgres-postgresql.vasari.svc.cluster.local:5432/vasari
+quarkus.datasource.jdbc.url=jdbc:postgresql://postgres-postgresql.vasari.svc:5432/vasari
 quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.database.default-schema=objspace
 quarkus.hibernate-orm.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
